--- a/translations/kangyur/translations/058-006_toh157-questions_of_the_kinnara_king_druma.xml
+++ b/translations/kangyur/translations/058-006_toh157-questions_of_the_kinnara_king_druma.xml
@@ -29,7 +29,7 @@
         <sponsor ref="sponsors.xml#sponsor-185">Sharon Xu and Michael Pan</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.12 <date>2021</date>
+                <edition>v 1.1.13 <date>2021</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -63,7 +63,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-18T17:04:01.57Z" user="celso">18/01/2023 17:04:01</note>
+        <note type="lastUpdated" date-time="2023-04-04T10:45:18.682Z" user="admin">04/04/2023 10:45:18</note>
         <note type="updated" update="text-version" value="v 1.01" date-time="2019-04-09T07:38:39.941Z" user="john">v 1.01 2018</note>
         <note type="updated" update="text-version" value="v 2.00" date-time="2019-05-12T12:27:27.753Z" user="andre">v 2.00 2019</note>
         <note type="updated" update="text-version" value="v 1.01" date-time="2019-05-24T15:24:26.732Z" user="andre">v 1.01 2018</note>
@@ -88,6 +88,7 @@
           <note type="updated" update="text-version" value="1.1.10" date-time="2022-07-26T06:10:25.405Z" user="cabie-sim">Auto (update-titles)</note>
           <note type="updated" update="text-version" value="1.1.11" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.1.12" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.1.13" date-time="2023-04-04T10:45:15.778Z" user="martina-cotter">Updated typo.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -974,7 +975,7 @@
             the Blessed One was residing. As soon as the kinnara king Druma started to play his
             lute, all the trees, and the majestic mountains Sumeru, Himavat, Gandhamādana,
             Mucilinda, and Mahāmucilinda, the black mountains, and all blades of grass, branches,
-            medicinal plants, and forests of this great trichiliososm started to vibrate, shudder,
+            medicinal plants, and forests of this great trichiliocosm started to vibrate, shudder,
             and reel; wobble, rock, and sway; and quiver, tremble, and quake. Just as someone
             intoxicated by liquor staggers, reels, and wobbles, all those trees and mountains
             started to bend, bow, and twist. <ref cRef="B2" type="bampo"/>
