--- a/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
+++ b/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
@@ -23,10 +23,10 @@
                 <sponsor ref="sponsors.xml#sponsor-213">Gu Yun and  Family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-067-002"/>
                 <date/>
             </publicationStmt>
@@ -42,7 +42,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:13:03.592Z" user="admin">26/07/2022 07:13:03</note>
+                <note type="lastUpdated" date-time="2023-04-04T14:55:06.282Z" user="admin">04/04/2023 14:55:06</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:08:09.648Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-06-17T13:57:27.628Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T13:35:04.385Z" user="amy">Auto (update-titles)</note>
@@ -52,6 +52,8 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-06-21T04:57:50.187Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-05T16:25:24.728Z" user="mike">summary added</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-07-26T07:12:55.988Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-04-04T14:55:01.986Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-04T14:55:01.986Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
