--- a/translations/kangyur/placeholders/055-006_toh132-the_sutra_on_the_samadhi_of_valiant_progress.xml
+++ b/translations/kangyur/placeholders/055-006_toh132-the_sutra_on_the_samadhi_of_valiant_progress.xml
@@ -15,10 +15,10 @@
                 <sponsor ref="eft:sponsor-219">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2021</date>
+                <edition>v 0.0.10 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-055-006"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T05:53:16.317Z" user="admin">26/07/2022 05:53:16</note>
+                <note type="lastUpdated" date-time="2023-04-05T11:53:05.242Z" user="admin">05/04/2023 11:53:05</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:32:00.063Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T16:47:53.597Z" user="amy">Auto (update-titles)</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-07-13T14:29:41.423Z" user="line-tofte">4</note>
@@ -46,6 +46,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-12-24T05:19:46.507Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-24T05:21:50.414Z" user="cabie-sim">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-07-26T05:53:10.499Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-05T11:53:00.948Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-05T11:53:00.948Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
