--- a/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
+++ b/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
@@ -15,12 +15,13 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <editor role="associateEditor" ref="eft:person-349">Joie Chen</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-076-008"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-30T09:29:46.754Z" user="admin">30/03/2023 09:29:46</note>
+                <note type="lastUpdated" date-time="2023-04-05T13:00:34.561Z" user="admin">05/04/2023 13:00:34</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">2.h</note>
@@ -51,6 +52,9 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2022-08-02T10:04:58.067Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-03-30T09:29:42.482Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-30T09:29:42.482Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-30T09:30:21.433Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-04-05T13:00:30.238Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-05T13:00:30.238Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
