--- a/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/034-030_toh42-the_sutra_of_the_moon.xml
@@ -15,10 +15,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.9 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-034-030"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-21T14:42:05.998Z" user="admin">21/02/2023 14:42:05</note>
+                <note type="lastUpdated" date-time="2023-04-05T14:54:44.726Z" user="admin">05/04/2023 14:54:44</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-08T12:56:12.293Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-03-10T08:30:56.299Z" user="line-tofte">3</note>
@@ -48,6 +48,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-30T12:39:28.628Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-02-21T14:42:00.189Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-02-21T14:42:00.189Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T14:54:40.43Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-05T14:54:40.43Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
