--- a/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/placeholders/072-031_toh331-the_sutra_of_the_moon.xml
@@ -15,10 +15,10 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-072-031"/>
                 <date/>
             </publicationStmt>
@@ -34,7 +34,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-21T14:44:18.729Z" user="admin">21/02/2023 14:44:18</note>
+                <note type="lastUpdated" date-time="2023-04-05T15:33:35.857Z" user="admin">05/04/2023 15:33:35</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:51:52.984Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:52:46.21Z" user="line-tofte">3</note>
@@ -50,6 +50,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-01-30T12:40:02.861Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-02-21T14:44:12.906Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-02-21T14:44:12.906Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T15:33:31.296Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-05T15:33:31.296Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
