--- a/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
+++ b/translations/kangyur/placeholders/034-014_toh26-the_perfection_of_wisdom_for_suryagarbha.xml
@@ -18,10 +18,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-034-014"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-17T08:48:53.12Z" user="admin">17/01/2023 08:48:53</note>
+                <note type="lastUpdated" date-time="2023-04-05T15:36:06.029Z" user="admin">05/04/2023 15:36:06</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:01.807Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T11:25:29.991Z" user="line-tofte">3</note>
@@ -51,6 +51,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-11T08:33:54.569Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-17T08:48:47.532Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-17T08:48:47.532Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T15:36:01.51Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-05T15:36:01.51Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
