--- a/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
+++ b/translations/kangyur/placeholders/034-015_toh27-the_perfection_of_wisdom_for_candragarbha.xml
@@ -18,10 +18,10 @@
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2022</date>
+                <edition>v 0.0.9 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.f">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-034-015"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-17T08:54:25.149Z" user="admin">17/01/2023 08:54:25</note>
+                <note type="lastUpdated" date-time="2023-04-05T15:37:13.015Z" user="admin">05/04/2023 15:37:13</note>
                 <note type="updated" update="translation-status" value="4" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-03-08T09:46:51.272Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-05-18T12:04:58.366Z" user="line-tofte">3</note>
@@ -51,6 +51,8 @@
                 <note type="updated" update="text-version" value="0.0.7" date-time="2023-01-09T10:25:12.07Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2023-01-17T08:54:19.58Z" user="line-tofte">2.f</note>
                 <note type="updated" update="text-version" value="0.0.8" date-time="2023-01-17T08:54:19.58Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T15:37:08.498Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-05T15:37:08.498Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
