--- a/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
+++ b/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
@@ -22,11 +22,11 @@
                 <sponsor ref="sponsors.xml#sponsor-6">Chang Tai Kwang</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2019</date>
+                <edition>v 0.0.3 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt status="2.e">
                 <idno xml:id="UT22084-040-007"/>
                 <date/>
             </publicationStmt>
@@ -44,11 +44,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T16:00:52.095Z" user="admin">29/06/2022 16:00:52</note>
+                <note type="lastUpdated" date-time="2023-04-05T15:44:53.157Z" user="admin">05/04/2023 15:44:53</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:02.591Z" user="mike">2.f</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-03-13T08:35:26.842Z" user="andreas">2.g</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T16:00:44.607Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="2.e" date-time="2023-04-05T15:44:48.8Z" user="line-tofte">2.e</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-05T15:44:48.8Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
