--- a/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
@@ -24,7 +24,7 @@
         <sponsor ref="eft:sponsor-206">Late Ng Ah Chon, Late Lee Tiang Chuan, Lee Cheng Watt and family, Late Lee Cheng Boon &amp; family, Lee Boon Tee &amp; family, Lee Pheck Tiang &amp; family, Lee Pheck Choo and family, Lee Siang Choo &amp; family.</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -58,7 +58,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-04-04T09:16:47.132Z" user="admin">04/04/2023 09:16:47</note>
+        <note type="lastUpdated" date-time="2023-04-06T09:15:47.409Z" user="admin">06/04/2023 09:15:47</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-08-11T07:39:21.424Z" user="john">2.e</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:12:53.765Z" user="mike">2.f</note>
@@ -97,6 +97,7 @@
           <note type="updated" update="text-version" value="1.0.2" date-time="2023-03-23T17:39:08.1Z" user="konchog">Inserted missing space at 1.26</note>
           <note type="updated" update="text-version" value="1.0.3" date-time="2023-04-03T16:08:49.185Z" user="martina-cotter">Updated glossary entries.</note>
           <note type="updated" update="text-version" value="1.0.4" date-time="2023-04-04T09:16:44.235Z" user="andre">Glossary matching revised - activated in CG</note>
+          <note type="updated" update="text-version" value="1.0.5" date-time="2023-04-06T09:15:44.509Z" user="andre">Definition of Bakula revised.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -5545,14 +5546,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="person" xml:id="UT22084-072-038-907">
-              <term>Bakula</term>
-              <term xml:lang="Bo-Ltn">ba ku la </term>
-              <term xml:lang="bo">བ་ཀུ་ལ།</term>
-              <term xml:lang="Sa-Ltn">Bakula</term>
-              <term type="definition">According to the Pāli sources, Bakula was the son of a
-                householder of Kosambī; see DPPN, s.v. “Bakula.”</term>
-            </gloss>
+                        <gloss xml:id="UT22084-072-038-907" type="person" mode="match">
+                            <term>Bakula</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">ba ku la</term>
+                            <term xml:lang="bo" type="sourceAttested">བ་ཀུ་ལ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bakula</term>
+                            <term type="definition">From a wealthy brahmin family, Bakula is said to have become a monk at the age of eighty and lived to be one hundred and sixty. He is also said to have had two families because as a baby he was swallowed by a large fish, and the family who discovered him alive in the fish’s stomach also claimed him as their child. He is regarded as the Buddha’s foremost pupil in terms of health and longevity. It is also said that he could remember many previous lifetimes and was a pupil of the previous buddhas Padmottara, Vipaśyin, and Kāśyapa. In this text, he is said to be the son of the king Dharmayaśas. However, according to Pāli sources, Bakula was the son of a householder of Kosambī; see DPPN, s.v. “Bakula.”</term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="person" xml:id="UT22084-072-038-909">
