--- a/translations/tengyur/placeholders/074-141_toh3077-buddhakayabhasya.xml
+++ b/translations/tengyur/placeholders/074-141_toh3077-buddhakayabhasya.xml
@@ -8,6 +8,10 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">sangs rgyas kyi sku bshad pa/</title>
                 <title xml:lang="en" type="mainTitle">An Explanation of the Body of a Buddha</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT23703-074-141"/>
             </publicationStmt>
@@ -24,10 +28,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-06-21T17:35:11.799Z" user="john">21/06/2021 17:35:11</note>
+                <note type="lastUpdated" date-time="2023-04-11T09:24:04.081Z" user="admin">11/04/2023 09:24:04</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3068-3116_PH_new_v2.4.xml" date-time="2021-11-02T13:56:37.974Z" user="admin"/>
                 <note type="updated" update="title" import="tengyur-data-3068-3116_PH_new_v2.4.xml" date-time="2021-11-02T13:56:37.974Z" user="admin">The opening of the text gives an expanded version ofthe title as “An Explanation of the Body of a Buddha and the Different Parts of a Stūpa” (sangs rgyas kyi
             sku dang mchod rten gyi cha dbye ba bshad pa)</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2023-04-11T09:24:01.234Z" user="celso">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
