--- a/translations/tengyur/placeholders/077-397a_toh3702a-nor_rgyun_mai_bstod_pa.xml
+++ b/translations/tengyur/placeholders/077-397a_toh3702a-nor_rgyun_mai_bstod_pa.xml
@@ -8,6 +8,10 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">nor rgyun ma'i bstod pa/</title>
                 <title xml:lang="en" type="mainTitle">A Praise of Vasudhārā</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT23703-077-397A"/>
             </publicationStmt>
@@ -25,8 +29,9 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-26T08:21:42.381Z" user="admin">26/07/2021 08:21:42</note>
+                <note type="lastUpdated" date-time="2023-04-11T10:01:04.988Z" user="admin">11/04/2023 10:01:04</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-3645-3706_PH_new_v2.4.xml" date-time="2021-11-02T14:09:34.826Z" user="admin"/>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2023-04-11T10:01:02.174Z" user="celso">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
