--- a/translations/tengyur/placeholders/024-027b_toh1599b-rdo_rje_phag_moi_pra_brtag_pa.xml
+++ b/translations/tengyur/placeholders/024-027b_toh1599b-rdo_rje_phag_moi_pra_brtag_pa.xml
@@ -8,6 +8,10 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">rdo rje phag mo'i pra brtag pa/</title>
                 <title xml:lang="en" type="mainTitle">Mirror Divination with Vajravārāhī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2023</date>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT23703-024-027B"/>
             </publicationStmt>
@@ -24,9 +28,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-04-16T13:11:16.253Z" user="admin">16/04/2021 13:11:16</note>
+                <note type="lastUpdated" date-time="2023-04-11T13:32:45.388Z" user="admin">11/04/2023 13:32:45</note>
                 <note type="updated" update="import" value="fileDesc" import="tengyur-data-1541-1606_PH_new_v2.4.xml" date-time="2021-11-02T13:18:33.485Z" user="admin"/>
                 <note type="updated" update="attribution" import="tengyur-data-1541-1606_PH_new_v2.4.xml" date-time="2021-11-02T13:18:33.485Z" user="admin">Author attribution taken from Derge Dkar-chag.</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2023-04-11T13:32:42.556Z" user="celso">0.0.1</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
