--- a/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
+++ b/translations/kangyur/placeholders/076-008_toh354-the_sutra_teaching_the_causes_and_effects_of_good_and_ill.xml
@@ -18,10 +18,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-076-008"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T13:00:34.561Z" user="admin">05/04/2023 13:00:34</note>
+                <note type="lastUpdated" date-time="2023-04-11T14:34:03.546Z" user="admin">11/04/2023 14:34:03</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-05-19T13:19:24.741Z" user="line-tofte">3</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T07:58:02.61Z" user="line-tofte">2.h</note>
@@ -55,6 +55,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-30T09:30:21.433Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-05T13:00:30.238Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-05T13:00:30.238Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-04-11T14:33:59.293Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-11T14:33:59.293Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
