--- a/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
+++ b/translations/kangyur/placeholders/076-009_toh355-the_sutra_that_teaches_the_ripening_of_virtuous_and_nonvirtuous_actions.xml
@@ -17,10 +17,10 @@
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-076-009"/>
                 <date/>
             </publicationStmt>
@@ -36,7 +36,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T13:01:47.279Z" user="admin">05/04/2023 13:01:47</note>
+                <note type="lastUpdated" date-time="2023-04-11T14:35:23.621Z" user="admin">11/04/2023 14:35:23</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:18:04.685Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-11-10T08:00:09.539Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -53,6 +53,8 @@
                 <note type="updated" update="text-version" value="0.0.9" date-time="2023-03-30T09:32:44.783Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-05T13:01:42.973Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-05T13:01:42.973Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-04-11T14:35:19.378Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.11" date-time="2023-04-11T14:35:19.378Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
