--- a/translations/kangyur/placeholders/090-034_toh590,985-the_invincible_spell_of_usnisasitatapatra.xml
+++ b/translations/kangyur/placeholders/090-034_toh590,985-the_invincible_spell_of_usnisasitatapatra.xml
@@ -22,12 +22,13 @@
                 <author role="translatorEng" ref="eft:person-321">Paul Thomas</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2020</date>
+                <edition>v 0.0.15 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-090-034"/>
                 <date/>
             </publicationStmt>
@@ -52,7 +53,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T10:18:34.352Z" user="admin">05/04/2023 10:18:34</note>
+                <note type="lastUpdated" date-time="2023-04-11T15:06:00.78Z" user="admin">11/04/2023 15:06:00</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:55:45.619Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:46:40.495Z" user="line-tofte">3</note>
@@ -74,6 +75,9 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-09T08:06:52.787Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-05T10:18:30.072Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-05T10:18:30.072Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-04-05T10:19:02.242Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-04-11T15:05:55.997Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-11T15:05:55.997Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
