--- a/translations/kangyur/placeholders/090-035_toh591-the_incantation_of_the_supremely_accomplished_great_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-035_toh591-the_incantation_of_the_supremely_accomplished_great_sitatapatra_aparajita.xml
@@ -18,12 +18,13 @@
                 <author role="translatorEng" ref="eft:person-321">Paul Thomas</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2020</date>
+                <edition>v 0.0.15 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-090-035"/>
                 <date/>
             </publicationStmt>
@@ -39,7 +40,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T10:20:10.278Z" user="admin">05/04/2023 10:20:10</note>
+                <note type="lastUpdated" date-time="2023-04-11T15:07:19.065Z" user="admin">11/04/2023 15:07:19</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:08.638Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:05.962Z" user="line-tofte">3</note>
@@ -61,6 +62,9 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-09T08:08:19.989Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-05T10:20:05.989Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-05T10:20:05.989Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-04-05T10:20:40.387Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-04-11T15:07:14.775Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-11T15:07:14.775Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
