--- a/translations/kangyur/placeholders/090-036_toh592,986-the_incantation_of_sitatapatra_aparajita.xml
+++ b/translations/kangyur/placeholders/090-036_toh592,986-the_incantation_of_sitatapatra_aparajita.xml
@@ -10,8 +10,8 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of Sitātapatrā</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryatathāgatoṣṇīṣa­sitātapatrāparājitā­nāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">ārya­tathāgatoṣṇīṣa­sitātapatrāparājitā­nāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gtsug tor nas byung ba'i gdugs dkar po can gzhan gyis mi thub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma de bzhin gshegs pa'i gtsug tor nas byung ba'i gdugs dkar po can gzhan gyis mi thub pa zhes bya ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gtsug tor nas byung ba'i gdugs dkar po can gzhan gyis mi thub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gdugs dkar gyi gzungs/</title>
                 <author role="translatorMain" ref="eft:team-48"/>
                 <consultant role="projectManager" ref="eft:person-305">Stefan Mang</consultant>
@@ -22,12 +22,13 @@
                 <author role="translatorEng" ref="eft:person-321">Paul Thomas</author>
                 <editor role="projectEditor" ref="eft:person-74">Ryan Damron</editor>
                 <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.13 <date>2020</date>
+                <edition>v 0.0.15 <date>2020</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-090-036"/>
                 <date/>
             </publicationStmt>
@@ -52,7 +53,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-05T10:21:40.902Z" user="admin">05/04/2023 10:21:40</note>
+                <note type="lastUpdated" date-time="2023-04-11T15:12:27.762Z" user="admin">11/04/2023 15:12:27</note>
                 <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">4</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-10-02T13:56:30.552Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-11-30T09:47:46.557Z" user="line-tofte">3</note>
@@ -74,6 +75,9 @@
                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-08-09T08:09:38.097Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2023-04-05T10:21:36.618Z" user="line-tofte">2.b</note>
                 <note type="updated" update="text-version" value="0.0.13" date-time="2023-04-05T10:21:36.618Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.14" date-time="2023-04-05T10:22:12.35Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2023-04-11T15:12:23.488Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.0.15" date-time="2023-04-11T15:12:23.488Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
