--- a/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
+++ b/translations/kangyur/placeholders/071-013_toh299-sutra_on_times_for_the_gong.xml
@@ -11,10 +11,10 @@
                 <author role="translatorEng" ref="eft:person-67">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-071-013"/>
                 <date/>
             </publicationStmt>
@@ -30,10 +30,12 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-14T08:39:07.785Z" user="admin">14/03/2023 08:39:07</note>
+                <note type="lastUpdated" date-time="2023-04-12T13:54:09.037Z" user="admin">12/04/2023 13:54:09</note>
                 <note type="updated" update="translation-status" value="3" date-time="2023-03-14T08:37:52.004Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2023-03-14T08:37:52.004Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-14T08:39:06.306Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-12T13:54:04.743Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-12T13:54:04.743Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
