--- a/translations/kangyur/translations/079-008_toh381-the_emergence_from_samputa.xml
+++ b/translations/kangyur/translations/079-008_toh381-the_emergence_from_samputa.xml
@@ -27,7 +27,7 @@
                 <sponsor ref="sponsors.xml#sponsor-46">a sponsor who wishes to remain anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.12.0 <date>2023</date>
+                <edition>v 1.12.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -68,7 +68,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-12T16:12:47.892Z" user="admin">12/04/2023 16:12:47</note>
+                <note type="lastUpdated" date-time="2023-04-12T17:50:39.106Z" user="admin">12/04/2023 17:50:39</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-04-09T12:05:18.46Z" user="andre">v 1.12 2018</note>
                 <note type="updated" update="translation-status" value="2" date-time="2019-04-11T17:30:17.63Z" user="andre">2</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2019-04-12T09:10:50.828Z" user="andre">2.a</note>
@@ -106,6 +106,7 @@
                 <note type="updated" update="text-version" value="1.11.21" date-time="2023-01-26T20:23:28.088Z" user="martina-cotter">updated bibl scope (gyud 'bum)</note>
                 <note type="updated" update="text-version" value="1.11.22" date-time="2023-04-04T10:21:59.8Z" user="martina-cotter">Edited typos.</note>
                 <note type="updated" update="text-version" value="1.12.0" date-time="2023-04-12T16:12:44.619Z" user="celso">Changed the placement of the milestones in the Skt. Appendix to match the ones in the translation</note>
+                <note type="updated" update="text-version" value="1.12.1" date-time="2023-04-12T17:50:35.848Z" user="celso">minor edit of glossary linking</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -12029,7 +12030,7 @@
                             <l>“The first method;</l>
                         </lg>
                         <lg tid="1408">
-                            <l>“One should draw a lotus with four petals</l>
+                            <l>“One should draw a <term type="ignore">lotus</term> with four petals</l>
                             <l>Extending throughout the cardinal and intermediate directions.
                                 {7.3.35}</l>
                         </lg>
