--- a/translations/kangyur/placeholders/101-152_toh1096-the_prayer_of_maitreya.xml
+++ b/translations/kangyur/placeholders/101-152_toh1096-the_prayer_of_maitreya.xml
@@ -9,19 +9,15 @@
                 <title type="mainTitle" xml:lang="en">The Prayer of Maitreya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pa'i smon lam/</title>
                 <author role="translatorMain" ref=""/>
-
-            
-<author role="translatorEng" ref="contributors.xml#person-324">84000 editors</author>
+                <author role="translatorEng" ref="contributors.xml#person-324">84000 editors</author>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
-
-            <publicationStmt status="2.h">
+            <publicationStmt status="">
                 <idno xml:id="UT22084-101-152"/>
                 <date/>
-
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh1096" type="text">
@@ -35,10 +31,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-03-05T09:56:28.614Z" user="admin">05/03/2020 09:56:28</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T09:24:27.564Z" user="john">0.0.1</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-05T09:56:26.199Z" user="line-tofte">2.h</note>
+                <note type="lastUpdated" date-time="2023-04-13T10:21:55.551Z" user="admin">13/04/2023 10:21:55</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-05T09:24:27.564Z" user="john">0.0.1</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-05T09:56:26.199Z" user="line-tofte">2.h</note>
+                <note type="updated" update="translation-status" value="" date-time="2023-04-13T10:21:51.18Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2023-04-13T10:21:51.18Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
