--- a/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
+++ b/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1.a">
@@ -60,7 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-22T14:19:36.892Z" user="admin">22/03/2023 14:19:36</note>
+                <note type="lastUpdated" date-time="2023-04-12T09:35:13.173Z" user="laura">12/04/2023 09:35:13</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:29:50.789Z" user="line-tofte">Auto
@@ -99,6 +99,7 @@
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-16T13:15:56.696Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:19:32.718Z" user="martina-cotter">1.a</note>
                 <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:19:32.718Z" user="martina-cotter">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2023-04-14T12:08:11.459Z" user="laura">Some suggestions from TCTGNY and cleaned up markup/copy</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -144,7 +145,7 @@
                         Mañjuśrī. The Tibetan translation lacks Sanskrit and Tibetan titles, and the
                         text opens simply with a salutation to Mañjuśrī in Sanskrit. This suggests
                         that the Tibetan translators considered the salutation to be part of the
-                        dhāraṇī proper, and thus did not translate it into Tibetan. Following the
+                        dhāraṇī proper and thus did not translate it into Tibetan. Following the
                         dhāraṇī proper, the scripture describes the benefits associated with its
                         recitation a single time, which include the purification of evil deeds accumulated
                         over eons, and then the rewards reaped by its extensive recitation, namely
@@ -157,25 +158,24 @@
                         Phangthangma catalogs suggests that it was translated into Tibetan later
                         than the beginning of the ninth century <hi rend="small-caps">ce</hi>,<note place="end" xml:id="UT22084-089-004-8"> The Denkarma catalog is usually
                             dated to ca. 812 ᴄᴇ. </note> but earlier than the flourishing of the
-                        scholar Butön Rinchen Drup (1290–1364), who listed it, along with the other
+                        scholar Butön Rinchen Drup (<foreign xml:lang="Bo-Ltn">bu ston rin chen grub</foreign>, 1290–1364), who listed it, along with the other
                         texts of this collection, in his <title xml:lang="en">History of
                             Buddhism</title>.<note place="end" xml:id="UT22084-089-004-9"> Butön
-                            Rinchen Drup (bu ston rin chen grub), <title xml:lang="Bo-Ltn">chos
-                                ’byung,</title> folio 172.a/ p. 975.</note>
+                            Rinchen Drup, <title xml:lang="Bo-Ltn">chos
+                                ’byung,</title> folio 172.a/p. 975.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-10"/>
                     <p tid="11">
                         <title xml:lang="en">Mañjuśrī’s Promise</title> appears as the third
                         text in a collection of six Mañjuśrī dhāraṇī scriptures (Toh 545–550) in the
                         Tantra section of the Degé Kangyur. Interestingly, only this text among the
-                        six does not also appear in the Dhāraṇī section, nor in the corresponding
+                        six does not also appear in the Dhāraṇī section or in the corresponding
                         sections of any of the other Kangyurs of the Tshalpa line. It is possible
-                        that the compilers considered the text primarily as a praise rather than as
-                        a dhāraṇī per se, and this may explain the exclusion.</p>
+                        that the compilers considered the text primarily as a praise rather than a dhāraṇī per se, and this may explain the exclusion.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-11"/>
                     <p tid="12">This English translation is based on the Degé Kangyur version (Toh
                         547), in consultation with the variant readings recorded in the Comparative
-                        Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>), and with the Stok
+                        Edition (<title xml:lang="Bo-Ltn">dpe bsdur ma</title>) and with the Stok
                         Palace version.</p>
                 </div>
             </div>
@@ -196,13 +196,13 @@
                         hūṁ hūṁ phaṭ phaṭ phaṭ
                             svāhā<note place="end" xml:id="UT22084-089-004-34"> Provisional
                             translation: “Homage to Mañjuśrī, the ever-youthful bodhisattva great
-                            being, one of great compassion! “It is: <foreign xml:lang="Sa-Ltn">Oṁ</foreign>, immaculate, untainted, pure, utterly
+                            being, one of great compassion! It is: <foreign xml:lang="Sa-Ltn">Oṁ</foreign>, immaculate, untainted, pure, utterly
                             pure, purifying one, making perfectly pure, stainless, utterly
                             stainless, and triumphant! You who convey and move with the roaring
                             sounds <foreign xml:lang="Sa-Ltn">ru ru</foreign>, <foreign xml:lang="Sa-Ltn">hūṁ hūṁ hūṁ</foreign> <foreign xml:lang="Sa-Ltn">phaṭ phaṭ phaṭ</foreign>, <foreign xml:lang="Sa-Ltn">svāhā</foreign>!” 
                                 Our translation of the Skt. <foreign xml:lang="Sa-Ltn">ru ru cale</foreign> is tentative. 
                                 It could alternatively be interpreted as one word (<foreign xml:lang="Sa-Ltn">rurucale</foreign>), 
-                                meaning “you with the movements of an antelope,” and implying grace and gentleness.</note>||</p>
+                                meaning “you with the movements of an antelope” and implying grace and gentleness.</note>||</p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-35"/>
                     <p tid="29">Those who uphold, read aloud, or teach this dhāraṇī will obtain a
                         keen intellect. If they chant it a single time, they will memorize a hundred
@@ -213,9 +213,8 @@
                         recite it three hundred thousand times, they will behold the body of
                         Mañjuśrī.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-36"/>
-                    <trailer tid="30">This concludes <title xml:lang="en">The Dhāraṇī “Mañjuśrī’s
-                            Promise.”</title>
-                    </trailer>
+                    <trailer tid="30">This concludes the dhāraṇī “<title xml:lang="en">Mañjuśrī’s
+                            Promise</title>.”</trailer>
                 </div>
             </div>
         </body>
@@ -248,10 +247,10 @@
                     <bibl xml:id="UT22084-089-004-16">Phangthangma (<title xml:lang="Bo-Ltn">dkar
                             chag ʼphang thang ma</title>). Beijing: mi rigs dpe skrun khang,
                         2003.</bibl>
-                    <bibl xml:id="UT22084-089-004-17">Butön Rinchen Drup (<foreign xml:lang="Bo-Ltn" type="term">bu ston rin chen grub</foreign>). <title xml:lang="Bo-Ltn">chos ’byung</title> (<title xml:lang="Bo-Ltn">bde bar gshegs pa’i bstan
+                    <bibl xml:id="UT22084-089-004-17">Butön Rinchen Drup (bu ston rin chen grub). <title xml:lang="Bo-Ltn">chos ’byung</title> (<title xml:lang="Bo-Ltn">bde bar gshegs pa’i bstan
                             pa’i gsal byed chos kyi ’byung gnas gsung rab rin po che’i gter
                             mdzod</title>). In <title xml:lang="en">The Collected Works of
-                            Bu-Ston</title>, vol. 24 (ya), folios 1.a–212.a/ pp. 633–1055. New
+                            Bu-Ston</title>, vol. 24 (ya), folios 1.a–212.a/pp. 633–1055. New
                         Delhi: International Academy of Indian Culture, 1965–71.</bibl>
                 </div>
                 <div type="section" xml:id="UT22084-089-004-listBibl-2">
